--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,3 +36,14 @@ allprojects {
         jcenter()
     }
 }
+
+// subprojects {
+//     afterEvaluate {project ->
+//         if (project.hasProperty("android")) {
+//             android {
+//                 compileSdkVersion 27
+//                 buildToolsVersion '27.0.3'
+//             }
+//         }
+//     }
+// }
