--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-dialog": "^5.6.0",
     "react-native-easy-toast": "^1.2.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-percentage-circle": "^1.0.7",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-router-flux": "^4.0.6",
     "react-timer-mixin": "^0.13.4",
